@@ -25,7 +25,7 @@
 
 .add-snippet
 { float: right;
-  }
+}
 
 #not_found_popup
 { display: none;
@@ -41,15 +41,24 @@
 }
 
 .popup
-{
-    display: none;
-    z-index: 10000;
-    width: 30em;
-    min-height: 8em;
-    padding: 1em;
-    border: 1px solid black;
-    background-color: white;
-    /* CSS3 styling for latest browsers */
-    -moz-box-shadow:0 0 40px 5px black;
-    -webkit-box-shadow: 0 0 40px black;
+{ display: none;
+  z-index: 10000;
+  width: 30em;
+  min-height: 8em;
+  padding: 1em;
+  border: 1px solid black;
+  background-color: white;
+  /* CSS3 styling for latest browsers */
+  -moz-box-shadow:0 0 40px 5px black;
+  -webkit-box-shadow: 0 0 40px black;
+}
+
+
+#animation-slider
+{ display: block;
+  float: left;
+  width: 20em;
+  line-height: 1.5em;
+  margin-top: 0.4em;
+  margin-left: 1em;
 }
